# entangld

./: .eslintrc.json  .gitignore  .gitmodules  LICENSE  README.hbs  README.md  generate_docs.js  index.js  package-lock.json  package.json
.github/workflows/: mocha-tests.yml
lib/: Datastore.js  Error.js  Message.js  Subscription.js  error.js  utils.js
libraries/unix/: CMakeLists.txt  Doxyfile.in  README.md  entangld.pc.in
libraries/unix/include/: Datastore.h  Message.h
libraries/unix/samples/: CMakeLists.txt  client.cpp  debug.c  debug.h  server.cpp
libraries/unix/src/: Datastore.cpp
libraries/unix/test/: CMakeLists.txt  test_init.cpp  test_local_get.cpp  test_local_set.cpp  test_remote_get.cpp  test_remote_set.cpp
libraries/unix/test/0.misc/: CMakeLists.txt  test_init.cpp
libraries/unix/test/1.get/: CMakeLists.txt  test_get_basic.cpp  test_get_nested.cpp  test_get_remote.cpp
libraries/unix/test/2.set/: CMakeLists.txt  test_set_basic.cpp  test_set_nested.cpp  test_set_remote.cpp
libraries/unix/test/3.sub/: CMakeLists.txt  test_sub_basic.cpp  test_sub_nested.cpp  test_sub_remote.cpp
libraries/unix/test/4.unsub/: CMakeLists.txt  test_unsub_basic.cpp  test_unsub_remote.cpp
libraries/unix/test/5.node/: CMakeLists.txt  test_get.js.in  test_set.js.in  test_sub.js.in  test_unsub.js.in
scripts/: generate_docs.js
test/: circular.js  events.js  sockets.js  subscriptions.js  tests.js
