cmake_minimum_required(VERSION 3.5)

# Miscellaneous tests
add_subdirectory(0.misc)

# Value retrieval tests
add_subdirectory(1.get)

# Value setting tests
add_subdirectory(2.set)

# Subscription tests
add_subdirectory(3.sub)

# Unsubscription tests
add_subdirectory(4.unsub)

# NodeJS integration tests
add_subdirectory(5.node)
